2009-01-14  Andy Buckley  <andy@insectnation.org>

	* Converting AIDA/LWH divide function to return a DPS so that bin
	width factors don't get all screwed up. Analyses adapted to use
	the new division operation (a DPS/DPS divide would also be
	nice... but can wait for YODA).

2009-01-06  Andy Buckley  <andy@insectnation.org>

	* bin/make-plots: Added --png option for making PNG output files,
	using 'convert' (after making a PDF --- it's a bit messy)

	* bin/make-plots: Added --eps option for output filtering through
	ps2eps.

2009-01-05  Andy Buckley  <andy@insectnation.org>

	* Python: reworking Python extension build to use distutils and
	newer m4 Python macros. Probably breaks distcheck but is otherwise
	more robust and platform independent (i.e. it should now work on
	Macs).

2008-12-19  Andy Buckley  <andy@insectnation.org>

	* make-plots: Multi-threaded make-plots and cleaned up the LaTeX
	building a bit (necessary to remove the implicit single global
	state).

2008-12-18  Andy Buckley  <andy@insectnation.org>

	* make-plots: Made LaTeX run in no-stop mode.

	* compare-histos: Updated to use a nicer labelling syntax on the
	command line and to successfully build MC-MC plots.

2008-12-16  Andy Buckley  <andy@insectnation.org>

	* Made LWH bin edge comparisons safe against numerical errors.

	* Added Particle comparison functions for sorting.

	* Removing most bad things from ExampleTree and tidying up. Marked
	WZandh projection for removal.

2008-12-03  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Added the two missing observables to the CDF_2008_NOTE_9337 analysis,
	i.e. track pT and sum(ET). There is a small difference between our MC
	output and the MC plots of the analysis' author, we're still waiting
	for the author's comments.

2008-12-02  Andy Buckley  <andy@insectnation.org>

	* Overloading use of a std::set in the interface, since the
	version of SWIG on Sci Linux doesn't have a predefined mapping for
	STL sets.
